testsuite/tests/typecheck/should_fail/tcfail080.stderr

tcfail080.hs:27:1: error:
    • Cannot infer an ambiguous type signature.
    • The type variable ‘c0’ is ambiguous.
    • When checking the inferred type
        q :: forall {a}. Collection c0 a => a -> Bool
